refactor: resolve better security for restrict GET for only manager, add validation and Bad Request error handling
